# ffmpeg_video_player_tutorial

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt  lsan_suppressions.cpp
android/andriod_tutorials/: settings.gradle
android/andriod_tutorials/app/: build.gradle
android/andriod_tutorials/app/src/androidTest/java/com/example/videoplayertutorials/: ExampleInstrumentedTest.kt  SimplePlayerTest.kt
android/andriod_tutorials/app/src/main/: AndroidManifest.xml
android/andriod_tutorials/app/src/main/cpp/: CMakeLists.txt  jni_simple_player.cpp  jni_tutorial01_hello_ffmpeg.cpp  jni_tutorial02_usesurfaceview.cpp
android/andriod_tutorials/app/src/main/java/com/example/videoplayertutorials/: DisplayVideoActivity.kt  MainActivity.kt  MySurfaceView.kt  SimplePlayer.kt  T02DisplayImageActivity.kt  T02DisplayVideoActivity.kt  Tutorial01.kt  Tutorial02.kt
android/andriod_tutorials/app/src/main/res/layout/: activity_display_image.xml  activity_display_video.xml  activity_main.xml  activity_tutorial01.xml  activity_tutorial02.xml
android/andriod_tutorials/app/src/main/res/values/: strings.xml  themes.xml
android/andriod_tutorials/app/src/main/res/values-night/: themes.xml
android/andriod_tutorials/app/src/test/java/com/example/videoplayertutorials/: ExampleUnitTest.kt
android/andriod_tutorials/gradle/wrapper/: gradle-wrapper.properties
android/tutorial01/app/: build.gradle
android/tutorial01/app/src/main/: AndroidManifest.xml
android/tutorial01/app/src/main/cpp/: native-lib.cpp
android/tutorial01/gradle/wrapper/: gradle-wrapper.properties
android/tutorial01_hello_ffmpeg/: .gitattributes  settings.gradle
android/tutorial01_hello_ffmpeg/app/src/androidTest/java/com/test/tutorial01/: ExampleInstrumentedTest.kt
android/tutorial01_hello_ffmpeg/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/tutorial01_hello_ffmpeg/app/src/main/java/com/test/tutorial01/: MainActivity.kt
android/tutorial01_hello_ffmpeg/app/src/main/res/values/: strings.xml  themes.xml
android/tutorial01_hello_ffmpeg/app/src/main/res/values-night/: themes.xml
android/tutorial01_hello_ffmpeg/app/src/test/java/com/test/tutorial01/: ExampleUnitTest.kt
android/tutorial02_surfaceview/: settings.gradle
android/tutorial02_surfaceview/app/: build.gradle
android/tutorial02_surfaceview/app/src/main/: AndroidManifest.xml
android/tutorial02_surfaceview/app/src/main/cpp/: CMakeLists.txt  usesurfaceview.cpp
android/tutorial02_surfaceview/app/src/main/res/layout/: activity_display_image.xml  activity_display_video.xml  activity_main.xml
android/tutorial02_surfaceview/app/src/main/res/values/: strings.xml  themes.xml
android/tutorial02_surfaceview/app/src/main/res/values-night/: themes.xml
android/tutorial02_surfaceview/gradle/wrapper/: gradle-wrapper.properties
include/j_video_player/ffmpeg_utils/: ffmpeg_audio_resampler.h  ffmpeg_codec.h  ffmpeg_common_utils.h  ffmpeg_decode_engine.h  ffmpeg_decoder_context.h  ffmpeg_demuxer.h  ffmpeg_format_utils.h  ffmpeg_frame_queue.h  ffmpeg_headers.h  ffmpeg_image_converter.h  ffmpeg_object_deleter.h  ffmpeg_packet_queue.h  ffmpeg_waitable_frame_queue.h  ffmpeg_waitable_packet_queue.h
include/j_video_player/modules/: j_audio_decoder.h  j_audio_render.h  j_audio_sample_dispatcher.h  j_base_audio_output.h  j_base_video_output.h  j_ffmpeg_av_decoder.h  j_ffmpeg_base_decoder.h  j_ffmpeg_video_decoder.h  j_frame.h  j_i_audio_decoder.h  j_i_audio_output.h  j_i_decoder.h  j_i_source.h  j_i_source_deprecated.h  j_i_video_decoder.h  j_i_video_output.h  j_i_video_source.h  j_media_file_info.h  j_sdl2_audio_output.h  j_sdl2_render.h  j_sdl2_video_output.h  j_simple_player.h  j_simple_source.h  j_simple_video_source.h  j_video_decoder.h  j_video_file_info.h  j_video_frame.h  j_video_render.h
include/j_video_player/modules/android/: j_andr_audio_output.h  j_andr_surfaceview_video_output.h
include/j_video_player/utils/: av_synchronizer.h  clock_manager.h  waitable_event.h  waitable_queue.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_accurate_seeker.cpp  test_av_synchronizer.cpp  test_clock_manager.cpp  test_ffmpeg_audio_packet_queue.cpp  test_ffmpeg_audio_resampler.cpp  test_ffmpeg_codec.cpp  test_ffmpeg_decode_engine.cpp  test_ffmpeg_demuxer.cpp  test_ffmpeg_format_utils.cpp  test_ffmpeg_frame_queue.cpp  test_ffmpeg_image_converter.cpp  test_ffmpeg_packet_queue.cpp  test_ffmpeg_waitalbe_frame_queue.cpp  test_ffmpeg_waitalbe_packet_queue.cpp  test_waitable_queue.cpp
tests/modules/: test_audio_decoder.cpp  test_audio_sample_dispatcher.cpp  test_base_decoder.cpp  test_base_video_output.cpp  test_ffmpeg_audio_decoder.cpp  test_ffmpeg_decoder.cpp  test_ffmpeg_video_decoder.cpp  test_sdl2_audio_output.cpp  test_sdl2_render.cpp  test_sdl2_video_output.cpp  test_simple_video_source.cpp  test_video_decoder.cpp
tutorial00/: CMakeLists.txt  tutorial00.cpp
tutorial01/: CMakeLists.txt  my_tutorial01.cpp  tutorial01.cpp
tutorial02/: CMakeLists.txt  my_tutorial02.cpp  tutorial02.c
tutorial03/: CMakeLists.txt  my_tutorial03.cpp  my_tutorial03_01.cpp  my_tutorial03_02.cpp
tutorial04/: CMakeLists.txt  my_tutorial04.cpp  my_tutorial04_01_timer.cpp  my_tutorial04_02_threads.cpp  my_tutorial04_03_fix_size_queue.cpp
tutorial05/: CMakeLists.txt  my_tutorial05.cpp  my_tutorial05_01_clock.cpp  tutorial05.c
tutorial07/: CMakeLists.txt  my_tutorial07.cpp  my_tutorial07_01_accurate_seek.cpp  tutorial07.c
tutorial08/: CMakeLists.txt  my_tutorial08.cpp  my_tutorial08_01.cpp
tutorial09/: CMakeLists.txt  my_tutorial09.cpp
utils/: CMakeLists.txt
utils/include/: scope_guard.h  simple_fifo.h
utils/include/ffmpeg_utils/: ffmpeg_audio_packet_queue.h  ffmpeg_audio_resampler.h  ffmpeg_codec.h  ffmpeg_common_utils.h  ffmpeg_decode_engine.h  ffmpeg_decoder_context.h  ffmpeg_demuxer.h  ffmpeg_frame_queue.h  ffmpeg_headers.h  ffmpeg_image_converter.h  ffmpeg_packet_queue.h  ffmpeg_waitable_frame_queue.h  ffmpeg_waitable_packet_queue.h
utils/include/utils/: av_synchronizer.h  clock.h  clock_manager.h  scope_guard.h  waitable_queue.h
(+8 files in other folders)
